// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deserialize deserializes a wallet from a string 1`] = `
Trezor {
  "cache": Object {},
  "getHDNode": [Function],
}
`;

exports[`deserialize deserializes a wallet from a string 2`] = `
Ledger {
  "getHDNode": [Function],
  "transport": LedgerU2F {
    "app": undefined,
    "transport": undefined,
  },
}
`;

exports[`deserialize deserializes a wallet from a string 3`] = `
Ledger {
  "getHDNode": [Function],
  "transport": LedgerWebUSB {
    "app": undefined,
    "descriptor": "foobar",
    "transport": undefined,
  },
}
`;

exports[`deserialize deserializes a wallet from a string 4`] = `
MnemonicPhrase {
  "hdNode": HDNode {
    "chainCode": Object {
      "data": Array [
        239,
        117,
        191,
        205,
        79,
        16,
        35,
        161,
        48,
        27,
        60,
        17,
        66,
        70,
        228,
        34,
        96,
        201,
        105,
        223,
        213,
        96,
        16,
        101,
        210,
        103,
        17,
        174,
        13,
        98,
        245,
        91,
      ],
      "type": "Buffer",
    },
    "depth": 0,
    "fingerprint": 1404659567,
    "index": 0,
    "parentFingerprint": 0,
    "privateKey": Object {
      "data": Array [
        4,
        76,
        232,
        229,
        54,
        234,
        78,
        76,
        97,
        180,
        40,
        98,
        188,
        152,
        248,
        197,
        116,
        148,
        47,
        183,
        113,
        33,
        226,
        127,
        49,
        108,
        177,
        90,
        150,
        217,
        201,
        154,
      ],
      "type": "Buffer",
    },
    "publicKey": Uint8Array [
      3,
      230,
      21,
      155,
      177,
      36,
      121,
      51,
      156,
      233,
      190,
      3,
      250,
      114,
      79,
      83,
      105,
      40,
      147,
      231,
      201,
      29,
      233,
      190,
      44,
      0,
      202,
      141,
      85,
      79,
      202,
      143,
      81,
    ],
  },
  "mnemonicPhrase": "test test test test test test test test test test test ball",
  "passphrase": undefined,
}
`;
